Switch edit button to grid to fix overflow issue for long category names

--- a/src/components/inventory/category-menu/categoryMenu.css
+++ b/src/components/inventory/category-menu/categoryMenu.css
@@ -70,13 +70,14 @@
 }
 
 .category-button--edit {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 0.5fr;
+    grid-gap: 5px;
+    justify-items: center;
     align-items: center;
-    justify-content: center;
     margin: 5px 10px;
-    padding-left: 27.8%;
-    width: 220px;
+    min-width: 220px;
+    max-width: fit-content;
     height: 42px;
     font-family: "Assistant", Arial, Helvetica, sans-serif;
     font-weight: 400;
@@ -95,11 +96,15 @@
     transition: 0.2s;
 }
 
+.category-button--edit-text {
+    grid-column-start: 2;
+}
+
 .category-icon {
     display: flex;
+    justify-self: center;
     border: none;
     width: 30px;
-    margin: 15px;
     background-color: transparent;
     cursor: pointer;
 }
